# auto-tag

./: .gitignore  README.md  auto-tag.py  model.py  requirements.txt  setup.cfg  tags.py
tags/: metadata.txt
