[metadata]
name = auto-tag
description = Adds tags to images by using DeepDanbooru.
long_description = file: README.md
author = Thusuzzee
url = https://github.com/nekos-best/auto-tag
version = 1.0.0

[options]
python_requires = >=3.7.0,<=3.7.10
install_requires =
    absl-py==2.1.0
    astor==0.8.1
    cachetools==4.2.4
    certifi==2024.7.4
    charset-normalizer==3.3.2
    gast==0.2.2
    google-auth==1.35.0
    google-auth-oauthlib==0.4.6
    google-pasta==0.2.0
    grpcio==1.62.2
    h5py==3.8.0
    idna==3.7
    importlib-metadata==6.7.0
    IPTCInfo3==2.1.4
    Keras-Applications==1.0.8
    Keras-Preprocessing==1.1.2
    Markdown==3.4.4
    MarkupSafe==2.1.5
    numpy==1.21.6
    oauthlib==3.2.2
    opt-einsum==3.3.0
    Pillow==9.5.0
    protobuf==3.20.0
    pyasn1==0.5.1
    pyasn1-modules==0.3.0
    requests==2.31.0
    requests-oauthlib==2.0.0
    rsa==4.9
    setuptools==47.1.0
    six==1.16.0
    tensorboard==2.0.2
    tensorflow==2.0.0
    tensorflow-estimator==2.0.1
    termcolor==2.3.0
    typing-extensions==4.7.1
    urllib3==2.0.7
    Werkzeug==2.2.3
    wheel==0.42.0
    wrapt==1.16.0
    zipp==3.15.0
